# Applicate-Tracking-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  main.py  models.py  services.py  storage.py  web.py
app/templates/: add_candidate.html  add_job.html  applications.html  base.html  candidates.html  index.html  jobs.html  submit_application.html
tests/: test_models.py  test_services.py
